--- a/05 - Flex Panel Gallery/index.html
+++ b/05 - Flex Panel Gallery/index.html
@@ -40,7 +40,6 @@
       transition:
         font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
         flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), background 0.2s;
-      font-size: 20px;
       background-size: cover;
       background-position: center;
 
@@ -48,25 +47,26 @@
       display: flex;
       justify-content: center;
       flex-direction: column;
+      cursor: pointer;
     }
 
-    .panel1 {
+    .panel:nth-child(1) {
       background-image: url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500);
     }
 
-    .panel2 {
+    .panel:nth-child(2) {
       background-image: url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500);
     }
 
-    .panel3 {
+    .panel:nth-child(3) {
       background-image: url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d);
     }
 
-    .panel4 {
+    .panel:nth-child(4) {
       background-image: url(https://source.unsplash.com/ITjiVXcwVng/1500x1500);
     }
 
-    .panel5 {
+    .panel:nth-child(5) {
       background-image: url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500);
     }
 
@@ -115,27 +115,27 @@
 <body>
 
   <div class="panels">
-    <div class="panel panel1">
+    <div class="panel">
       <p>Hey</p>
       <p>Let's</p>
       <p>Dance</p>
     </div>
-    <div class="panel panel2">
+    <div class="panel">
       <p>Give</p>
       <p>Take</p>
       <p>Receive</p>
     </div>
-    <div class="panel panel3">
+    <div class="panel">
       <p>Experience</p>
       <p>It</p>
       <p>Today</p>
     </div>
-    <div class="panel panel4">
+    <div class="panel">
       <p>Give</p>
       <p>All</p>
       <p>You can</p>
     </div>
-    <div class="panel panel5">
+    <div class="panel">
       <p>Life</p>
       <p>In</p>
       <p>Motion</p>
@@ -143,27 +143,31 @@
   </div>
 
   <script>
-    const panels = document.querySelectorAll('.panel');
+    const panels = document.querySelector('.panels');
+    const openPanels = document.getElementsByClassName('open');
+    const openActivePanels = document.getElementsByClassName('open-active');
 
-    panels.forEach(panel => panel.addEventListener('click', () => {
+    panels.addEventListener('click', e => {
+      const panel = e.target.closest('.panel');
+      if(!panel) return;
+
       const isOpen = panel.classList.contains('open');
-      panels.forEach(panel => panel.classList.remove('open'));
-      if(!isOpen) {
-        panel.classList.add('open');
+      if(openPanels.length) {
+        openPanels[0].classList.remove('open');
       }
-    }));
+      panel.classList.toggle('open', !isOpen);
+    });
 
-    panels.forEach(panel => panel.addEventListener('transitionend', e => {
-      if(e.propertyName.includes('flex')) {
-        panels.forEach(panel => {
-          if(panel.classList.contains('open')) {
-            panel.classList.add('open-active');
-          } else {
-            panel.classList.remove('open-active');
-          }
-        });
+    panels.addEventListener('transitionend', e => {
+      if(e.propertyName === 'flex' || e.propertyName === 'flex-grow') {
+        if(openActivePanels.length) {
+          openActivePanels[0].classList.toggle('open-active', openActivePanels[0].classList.contains('open'));
+        }
+        if(openPanels.length) {
+          openPanels[0].classList.add('open-active');
+        }
       }
-    }));
+    });
   </script>
 
 </body>
