--- a/15 - LocalStorage/index.html
+++ b/15 - LocalStorage/index.html
@@ -46,80 +46,6 @@
     </form>
   </div>
 
-  <script>
-    const addItems = document.querySelector('.add-items');
-    const itemsList = document.querySelector('.plates');
-    const items = JSON.parse(localStorage.getItem('items')) || [];
-    const applyAllButtons = document.getElementById('input-fields');
-
-    function addItem(e) {
-      e.preventDefault();
-      const name = (this.querySelector('[name=item]')).value;
-      items.push({ name, checked: false });
-      this.reset();
-
-      populateList(itemsList, items);
-      localStorage.setItem('items', JSON.stringify(items));
-    }
-
-    function populateList(itemsList, items = []) {
-      itemsList.textContent = '';
-      if(items.length === 0) {
-        const li = document.createElement('li');
-        li.textContent = 'Loading Tapas...';
-        itemsList.appendChild(li);
-        return;
-      }
-
-      items.map((item, idx) => {
-        const input = document.createElement('input');
-        input.type = 'checkbox';
-        input.checked = item.checked;
-        input.setAttribute('id', `item${idx}`);
-        input.setAttribute('data-index', idx);
-
-        const li = document.createElement('li');
-        const label = document.createElement('label');
-        label.textContent = item.name;
-        label.setAttribute('for', `item${idx}`);
-        li.append(input);
-        li.append(label);
-        itemsList.appendChild(li);
-      });
-    }
-
-    function setItemsChecked(itemList, checked = true) {
-      for(const item of itemList) {
-        item.checked = checked;
-      }
-    }
-
-    addItems.addEventListener('submit', addItem);
-
-    itemsList.addEventListener('click', e => {
-      const input = e.target.closest('input');
-      if(!input) return;
-
-      const item = items[input.dataset.index];
-      item.checked = !item.checked;
-      localStorage.setItem('items', JSON.stringify(items));
-      populateList(itemsList, items);
-    });
-
-    applyAllButtons.addEventListener('click', e => {
-      if(e.target.closest('#clear-all')) {
-        items.length = 0;
-      } else if(e.target.closest('#check-all')) {
-        setItemsChecked(items);
-      } else if(e.target.closest('#uncheck-all')) {
-        setItemsChecked(items, false);
-      }
-
-      localStorage.setItem('items', JSON.stringify(items));
-      populateList(itemsList, items);
-    });
-
-    populateList(itemsList, items);
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
